--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node-appwrite": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.6",
+    "@types/node": "^20.14.10",
     "prettier": "^3.0.0"
   }
 }
