--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/bun": "^1.1.6",
     "@types/node": "^20.14.10",
     "prettier": "^3.0.0"
+  },
+  "patchedDependencies": {
+    "node-appwrite@13.0.0": "patches/node-appwrite@13.0.0.patch"
   }
 }
