--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "node-appwrite": "^13.0.0"
+    "node-appwrite": "^13.0.0",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
