Revert "show log message for info, warn, error, log in console"
This reverts commit a2030401bcf061e8ccbfef2ec7f24e7c88635033.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "node-appwrite": "^13.0.0",
-    "winston": "^3.13.1"
+    "node-appwrite": "^13.0.0"
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
